--- a/pom.xml
+++ b/pom.xml
@@ -752,6 +752,10 @@
           <id>cloudera</id>
           <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
         </repository>
+        <repository>
+          <id>hortonworks</id>
+          <url>http://repo.hortonworks.com/content/groups/public/</url>
+        </repository>
       </repositories>
     </profile>
 
