--- a/pom.xml
+++ b/pom.xml
@@ -888,6 +888,9 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
+<configuration> <!-- add this to disable checking -->
+                <additionalparam>-Xdoclint:none</additionalparam>
+            </configuration>
               </execution>
             </executions>
           </plugin>
