--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -330,8 +330,8 @@
 </property>
 
 <property>
-  <name>zeppelin.interpreter.group.order</name>
-  <value>spark,md,angular,sh,livy,alluxio,file,psql,flink,python,ignite,lens,cassandra,geode,kylin,elasticsearch,scalding,jdbc,hbase,bigquery,beam,groovy</value>
+  <name>zeppelin.interpreter.group.default</name>
+  <value>spark</value>
   <description></description>
 </property>
 
