--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
     <plugin.antrun.version>1.7</plugin.antrun.version>
     <plugin.download.version>1.3.0</plugin.download.version>
     <plugin.deploy.version>2.8.2</plugin.deploy.version>
+    <plugin.shade.version>3.1.1</plugin.shade.version>
 
     <PermGen>64m</PermGen>
     <MaxPermGen>512m</MaxPermGen>
